Support file extensions (Does not work properly for now)

--- a/package.yaml
+++ b/package.yaml
@@ -26,10 +26,12 @@ dependencies:
 - filepath
 - recursion-schemes
 - optparse-applicative
+- split
 - template-haskell
 - uri-encode
 
 default-extensions:
+- ApplicativeDo
 - DeriveAnyClass
 - DeriveFunctor
 - RecordWildCards
